--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 
   <head> 
 
-    <title>💚Mr Lawrence's Site</title> 
-
+    <title>💚India's Site</title> 
+    <style> 
+      #header {background-color: purple;} 
+      #heading3 {background-color: yellow;}
+    </style> 
   </head> 
 
   <body> 
@@ -18,15 +21,15 @@
 
      <td> 
 
-      <img src="images/lsg-modified.png" width = 200 alt="lsg-modified.png"> 
+      <img src=""> 
 
      </td> 
 
      <td> 
 
-      <h1>Mr L S Grant-Lapre</h1> 
+      <h1 id = "header">India</h1> 
 
-      <p><em>Seton Catholic College</em> Teacher</p><hr> 
+      <p><em>Seton Catholic College</em> Student</p><hr> 
 
     </td> 
 
@@ -34,7 +37,7 @@
 
     </table> 
 
-    <p>I have been recently employed to teach at <a href="https://www.seton.wa.edu.au/">Seton Catholic College</a>. Currently working in the department of Technology.</p> 
+    <p> I am student at <a href="https://www.seton.wa.edu.au/">Seton Catholic College</a>.</p> 
 
  
 
@@ -44,15 +47,15 @@
 
  
 
-    <h3>My Pages</h3> 
+    <h3 id = "heading3">My Pages</h3> 
 
     <ol> 
 
-      <a href="page1.html"><li>Page 1</li></a> 
+      <a href="page1.html"><li>Page 1 - Introduction to me </li></a> 
 
-      <li>Page 2</li> 
+      <li>Page 2 - My Hobbies</li> 
 
-      <li>Page 3</li> 
+      <li>Page 3 - </li> 
 
       <li>Page 4</li> 
 
