--- a/MyHobbies.html
+++ b/MyHobbies.html
@@ -27,8 +27,8 @@
 
      <td> 
 
-      <h1> My Hobbies are</h1> 
-   <ul> 
+      <h1 id = "header"> My Hobbies are</h1> 
+   <ul id = ""heading3" > 
 <li> Looking at advanced math - like the gradient of a curve or Logarithims
 <li> Searching up new and different dieases or condistions that I hear about 
 <li> Looking at uni cource books - I am especially the ones that offer cources that I interested in, like engineer of biomedical science. 
