--- a/MyHobbies.html
+++ b/MyHobbies.html
@@ -31,7 +31,7 @@
    <ul id = ""heading3" > 
 <li> Looking at advanced math - like the gradient of a curve or Logarithims
 <li> Searching up new and different dieases or condistions that I hear about 
-<li> Looking at uni cource books - I am especially the ones that offer cources that I interested in, like engineer of biomedical science. 
+<li> Looking at uni cource books - I am especially the ones that offer cources that I interested in, like engineering of biomedical science. 
 </ul> 
  
 
