--- a/MySite1.html
+++ b/MySite1.html
@@ -12,16 +12,15 @@
   </head> 
 
   <body> 
-<h1>India </h1> 
+<h1 id = "header">India </h1> 
 <h3> <em> <a href = "https://www.seton.wa.edu.au/"> Seton Catholic College Student </a> </em>
 
-<h2> My Pages </h2> 
+<div id = "heading3"> <h2> My Pages </h2> 
 
     <ol>
      <li> <a href = "AboutMe-1.html"> Page 1 </a> 
 	<li> <a href = "MyHobbies.html"> Page 2 </a> 
-     
- 
+    </div> 
 
  
 
