--- a/index.html
+++ b/index.html
@@ -51,13 +51,11 @@
 
     <ol> 
 
-      <a href="page1.html"><li>Page 1 - Introduction to me </li></a> 
+     <li> <a href="AboutMe-1.html"><li>Page 1 - About me </li></a> 
 
-      <li>Page 2 - My Hobbies</li> 
+      <li><a href = "MyHobbies">Page 2 - My Hobbies</li> </a> 
 
-      <li>Page 3 - </li> 
-
-      <li>Page 4</li> 
+      
 
     </ol><hr> 
 
